--- a/index.html
+++ b/index.html
@@ -4,8 +4,101 @@
 	<title>Letalandroid</title>
 	<meta charset="utf-8">
 	<link rel="icon" href="icono.ico">
+	<!--Fuente para el título!-->
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Ballet&display=swap" rel="stylesheet">
+	<!--Fuente para el párrafo!-->
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap" rel="stylesheet">
+	<!--Fuente para las redes_sociales!-->
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 </head>
-<body>
-
+<body bgcolor="#D3FFCA" id="inicio">
+	<div>
+		<div style="font-family: 'Ballet', cursive;">
+			<center>
+				<h1 style="font-size: 70px"><a href="#">Mi Página Web</a><u></u></h1>
+			</center>
+		</div>
+		<div align="right">
+			<audio src="audio.mp3" controls=""></audio></h1>
+		</div>
+	</div>
+	<div style="font-family: 'Balsamiq Sans', cursive;">
+		<div>
+			<p style="font-size: 30px">Mi nombre en si no es "Letalandroid", obviamente, tengo 16 y estoy empezando con esto de la "programación" más especificamente hablando, Diseño Web, como verán, esta es una página creada con puro <a href="https://letalandroid.github.io/informacion-html/">HTML</a>(HyperText Markup Language), o Lenguaje de Marcado e HiperTexto en español, o la base de la mayoría de páginas webs actualmente por no decir todas. Actualmente estudiando en un curso de CSS(Cascading Style Sheets), o Hojas de Estilo en Cascada, o el poder diseñar una página con colores, sombras, etc. Para que en un futuro, no muy lejano o eso espero, comenzar con JavaScript. Y, pues, por todo lo que estoy diciendo, suponiendo mi edad y mi procedencia: Perú 🇵🇪 . Pues no, no he terminado ni tampoco iniciado mi vida universitaria. En fin, sin mucho más que decir, claramente algunas cosas como el fondo y la fuente NO se deberían aplicar desde <a href="https://letalandroid.github.io/informacion-html/">HTML</a> ya que para eso existe CSS, pero tampoco quería dejar en 0 la página, o no agregarle uno que otro diseño. Ahora si, sin más que añadir, dejo mis <a href="#redes_sociales">redes sociales</a> y alguna que otra imagen.</p>
+		</div>
+		<br>
+		<br>
+		<div>
+			<center>
+				<div>
+					<a href="https://www.youtube.com/channel/UCxO21Lt_MNFx2Plq13UHO-A?sub_confirmation=1" target="_BLANK"><img src="logo.jpg" alt="logo" width="400" title="mi_logo"></a>
+				</div>
+			</center>
+		</div>
+	</div>
+	<br>
+	<br>
+	<br>
+	<hr>
+	<center>
+		<div style="font-family: 'Bebas Neue', cursive;">
+		<h1 style="font-size: 90px" id="redes_sociales">
+			🙎‍♂️ Mis redes: 🙎‍♂️
+		</h1>
+		<div>
+			<div style="font-size: 35px">
+				<img src="logos/fb.png" width="25"> Facebook: <a href="https://www.facebook.com/Letalandroid" target="_BLANK">Letalandroid</a>
+			</div>
+			<br>
+			<div style="font-size: 35px">
+				<img src="logos/yt.png" width="25"> Youtube: <a href="https://www.youtube.com/channel/UCxO21Lt_MNFx2Plq13UHO-A" target="_BLANK">Letalandroid</a>
+			</div>
+			<br>
+			<div style="font-size: 35px">
+				<img src="logos/twitch.png" width="25"> Twitch: <a href="https://www.twitch.tv/letalandroid" target="_BLANK">Letalandroid</a>
+			</div>
+			<br>
+			<div style="font-size: 35px">
+				<img src="logos/ig.png" width="25"> Instagram: <a href="https://www.instagram.com/carlosj_mm/" target="_BLANK">@Carlosj_mm</a>
+			</div>
+			<br>
+			<div style="font-size: 35px">
+				<img src="logos/twitter.png" width="30"> Twitter: <a href="https://twitter.com/Let_android" target="_BLANK">@Let_android</a>
+			</div>
+			<br>
+			<div style="font-size: 35px">
+				<img src="logos/github.png" width="25"> GitHub: <a href="https://github.com/Letalandroid" target="_BLANK">Letalandroid</a>
+			</div>
+		</div>
+	</div>
+	</center>
+	<br>
+	<br>
+	<br>
+	<br>
+	<div>
+		<h1 style="font-size: 10">
+		Algunos "Trabajos" o "Proyectos":
+		</h1>
+		<ul style="font-size: 20px">
+			<li><a href="https://letalandroid.github.io/pagina-de-prueba-1/">Página de prueba 1</a></li>
+			<li><a href="https://letalandroid.github.io/pagina-de-prueba-con-full-aprendizaje-html/">Página de prueba con full aprendizaje html</a></li>
+			<li><a href="https://letalandroid.github.io/informacion-html/">Información HTML</a></li>
+			<li><a href="https://letalandroid.github.io/L/">@L</a></li>
+		</ul>
+	</div>
+	
+	<center>
+		<a href="#inicio">Volver al inicio</a>
+	</center>
+	<hr>
+	<div>
+		<footer>
+		<p style="font-family: forte;">@:p</p>
+	</footer>
+	</div>
 </body>
 </html>
