--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 	<div>
 		<div style="font-family: 'Ballet', cursive;">
 			<center>
-				<h1 style="font-size: 70px"><a href="#">Mi Página Web</a><u></u></h1>
+				<h1 style="font-size: 70px">
+					<u>Mi Página Web</u>
+				</h1>
 			</center>
 		</div>
 		<div align="right">
