--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<div style="font-family: 'Ballet', cursive;">
 			<center>
 				<h1 style="font-size: 70px">
-					<u>Mi Página Web</u>
+					<u>Welcome To My Repository</u>
 				</h1>
 			</center>
 		</div>
@@ -44,7 +44,7 @@
 	<br>
 	<br>
 	<br>
-	<hr>
+	<hr color="#000">
 	<center>
 		<div style="font-family: 'Bebas Neue', cursive;">
 		<h1 style="font-size: 90px" id="redes_sociales">
@@ -96,7 +96,7 @@
 	<center>
 		<a href="#inicio">Volver al inicio</a>
 	</center>
-	<hr>
+	<hr color="#000">
 	<div>
 		<footer>
 		<p style="font-family: forte;">@:p</p>
