--- a/index.html
+++ b/index.html
@@ -86,10 +86,9 @@
 		Algunos "Trabajos" o "Proyectos":
 		</h1>
 		<ul style="font-size: 20px">
-			<li><a href="https://letalandroid.github.io/pagina-de-prueba-1/">Página de prueba 1</a></li>
-			<li><a href="https://letalandroid.github.io/pagina-de-prueba-con-full-aprendizaje-html/">Página de prueba con full aprendizaje html</a></li>
-			<li><a href="https://letalandroid.github.io/informacion-html/">Información HTML</a></li>
-			<li><a href="https://letalandroid.github.io/L/">@L</a></li>
+			<li><a href="https://letalandroid.github.io/mi-primera-pagina-web/">Mi primera página web</a></li>
+			<li><a href="https://letalandroid.github.io/full-html/">Página de full html</a></li>
+			<li><a href="https://letalandroid.github.io/info-html/">Información sobre HTML</a></li>
 		</ul>
 	</div>
 	
