--- a/index.html
+++ b/index.html
@@ -3,6 +3,19 @@
 <head>
 	<title>Letalandroid</title>
 	<meta charset="utf-8">
+	<style type="text/css">
+	
+	#h1 {
+		display: inline-block;
+		margin-left: 200px;
+		margin-right: 40px;
+	}
+
+	#audio {
+		display: inline-block;
+	}
+
+	</style>
 	<link rel="icon" href="icono.ico">
 	<!--Fuente para el título!-->
 	<link rel="preconnect" href="https://fonts.gstatic.com">
@@ -16,20 +29,18 @@
 </head>
 <body bgcolor="#D3FFCA" id="inicio">
 	<div>
-		<div style="font-family: 'Ballet', cursive;">
-			<center>
+		<div id="h1" style="font-family: 'Ballet', cursive;">
 				<h1 style="font-size: 70px">
 					<u>Welcome To My Repository</u>
 				</h1>
-			</center>
 		</div>
-		<div align="right">
-			<audio src="audio.mp3" controls=""></audio></h1>
+		<div id="audio">
+			<audio src="audio.mp3" controls=""></audio>
 		</div>
 	</div>
 	<div style="font-family: 'Balsamiq Sans', cursive;">
 		<div>
-			<p style="font-size: 30px">Mi nombre en si no es "Letalandroid", obviamente, tengo 16 y estoy empezando con esto de la "programación" más especificamente hablando, Diseño Web, como verán, esta es una página creada con puro <a href="https://letalandroid.github.io/informacion-html/">HTML</a>(HyperText Markup Language), o Lenguaje de Marcado e HiperTexto en español, o la base de la mayoría de páginas webs actualmente por no decir todas. Actualmente estudiando en un curso de CSS(Cascading Style Sheets), o Hojas de Estilo en Cascada, o el poder diseñar una página con colores, sombras, etc. Para que en un futuro, no muy lejano o eso espero, comenzar con JavaScript. Y, pues, por todo lo que estoy diciendo, suponiendo mi edad y mi procedencia: Perú 🇵🇪 . Pues no, no he terminado ni tampoco iniciado mi vida universitaria. En fin, sin mucho más que decir, claramente algunas cosas como el fondo y la fuente NO se deberían aplicar desde <a href="https://letalandroid.github.io/informacion-html/">HTML</a> ya que para eso existe CSS, pero tampoco quería dejar en 0 la página, o no agregarle uno que otro diseño. Ahora si, sin más que añadir, dejo mis <a href="#redes_sociales">redes sociales</a> y alguna que otra imagen.</p>
+			<p style="font-size: 30px">Mi nombre en si no es "Letalandroid", obviamente, tengo 16 y estoy empezando con esto de la "programación" más especificamente hablando, Diseño Web, como verán, esta es una página creada con puro <a href="https://letalandroid.github.io/info-html/">HTML</a>(HyperText Markup Language), o Lenguaje de Marcado e HiperTexto en español, o la base de la mayoría de páginas webs actualmente por no decir todas. Actualmente estudiando en un curso de CSS(Cascading Style Sheets), o Hojas de Estilo en Cascada, o el poder diseñar una página con colores, sombras, etc. Para que en un futuro, no muy lejano o eso espero, comenzar con JavaScript. Y, pues, por todo lo que estoy diciendo, suponiendo mi edad y mi procedencia: Perú 🇵🇪 . Pues no, no he terminado ni tampoco iniciado mi vida universitaria. En fin, sin mucho más que decir, claramente algunas cosas como el fondo y la fuente NO se deberían aplicar desde <a href="https://letalandroid.github.io/info-html/">HTML</a> ya que para eso existe CSS, pero tampoco quería dejar en 0 la página, o no agregarle uno que otro diseño. Ahora si, sin más que añadir, dejo mis <a href="#redes_sociales">redes sociales</a> y alguna que otra imagen.</p>
 		</div>
 		<br>
 		<br>
