--- a/index.html
+++ b/index.html
@@ -3,19 +3,7 @@
 <head>
 	<title>Letalandroid</title>
 	<meta charset="utf-8">
-	<style type="text/css">
-	
-	#h1 {
-		display: inline-block;
-		margin-left: 200px;
-		margin-right: 40px;
-	}
-
-	#audio {
-		display: inline-block;
-	}
-
-	</style>
+	<link rel="stylesheet" href="stylesheet.css">
 	<link rel="icon" href="icono.ico">
 	<!--Fuente para el título!-->
 	<link rel="preconnect" href="https://fonts.gstatic.com">
@@ -35,7 +23,7 @@
 				</h1>
 		</div>
 		<div id="audio">
-			<audio src="audio.mp3" controls=""></audio>
+			<audio src="audio.mp3" controls="" autoplay loop></audio>
 		</div>
 	</div>
 	<div style="font-family: 'Balsamiq Sans', cursive;">
@@ -102,16 +90,10 @@
 			<li><a href="https://letalandroid.github.io/info-html/">Información sobre HTML</a></li>
 		</ul>
 	</div>
-	
+
 	<center>
 		<a href="#inicio">Volver al inicio</a>
 	</center>
-	<hr color="#000">
-	<div>
-		<footer>
-		<p style="font-family: forte;">@:p</p>
-	</footer>
-	</div>
 	<!--Start of Tawk.to Script-->
 	<script type="text/javascript">
 	var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
