--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
 </head>
 <body bgcolor="#D3FFCA" id="inicio">
 	<div>
+		<center>
 		<div id="h1" style="font-family: 'Ballet', cursive;">
 				<h1 style="font-size: 70px">
 					<u>Welcome To My Repository</u>
 				</h1>
 		</div>
+		</center>
 		<div id="audio">
 			<audio src="audio.mp3" controls="" autoplay loop></audio>
 		</div>
