--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<center>
 		<div id="h1" style="font-family: 'Ballet', cursive;">
 				<h1 style="font-size: 70px">
-					<u>Welcome To My Repository</u>
+					<u>Welcome To My</u>
 				</h1>
 		</div>
 		</center>
