--- a/index.html
+++ b/index.html
@@ -1,100 +1,141 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Letalandroid</title>
-	<meta charset="utf-8">
-	<link rel="stylesheet" href="stylesheet.css">
-	<link rel="icon" href="icono.ico">
-	<!--Fuente para el título!-->
+  <head>
+    <title>Letalandroid</title>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="stylesheet.css" />
+    <link rel="icon" href="icono.ico" />
+    <!--Fuente para el título!-->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Ballet&display=swap"
+      rel="stylesheet"
+    />
+    <!--Fuente para el párrafo!-->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <!--Fuente para las redes_sociales!-->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
+      rel="stylesheet"
+    />
+	<!--Fuente para repositorios-->
 	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Ballet&display=swap" rel="stylesheet">
-	<!--Fuente para el párrafo!-->
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap" rel="stylesheet">
-	<!--Fuente para las redes_sociales!-->
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-</head>
-<body bgcolor="#D3FFCA" id="inicio">
-	<div>
-		<center>
-		<div id="h1" style="font-family: 'Ballet', cursive;">
-				<h1 style="font-size: 70px">
-					<u>Welcome To My</u>
-				</h1>
-		</div>
-		</center>
-		<div id="audio">
-			<audio src="audio.mp3" controls="" autoplay loop></audio>
-		</div>
-	</div>
-	<div style="font-family: 'Balsamiq Sans', cursive;">
-		<div>
-			<p style="font-size: 30px">Mi nombre en si no es "Letalandroid", obviamente, tengo 16 y estoy empezando con esto de la "programación" más especificamente hablando, Desarrollo Web, como verán, esta es una página creada con puro <a href="https://letalandroid.github.io/info-html/">HTML</a>(HyperText Markup Language), o Lenguaje de Marcado e HiperTexto en español, o la base de la mayoría de páginas webs actualmente por no decir todas. Actualmente estudiando en un curso de CSS(Cascading Style Sheets), o Hojas de Estilo en Cascada, o el poder diseñar una página con colores, sombras, etc. Para que en un futuro, no muy lejano o eso espero, comenzar con JavaScript. Y, pues, por todo lo que estoy diciendo, suponiendo mi edad y mi procedencia: Perú 🇵🇪 . Pues no, no he terminado ni tampoco iniciado mi vida universitaria. En fin, sin mucho más que decir, claramente algunas cosas como el fondo y la fuente NO se deberían aplicar desde <a href="https://letalandroid.github.io/info-html/">HTML</a> ya que para eso existe CSS, pero tampoco quería dejar en 0 la página, o no agregarle uno que otro diseño. Ahora si, sin más que añadir, dejo mis <a href="#redes_sociales">redes sociales</a> y alguna que otra imagen.</p>
-		</div>
-		<br>
-		<br>
-		<div>
-			<center>
-				<div>
-					<a href="https://www.youtube.com/channel/UCxO21Lt_MNFx2Plq13UHO-A?sub_confirmation=1" target="_BLANK"><img src="logo.jpg" alt="logo" width="400" title="mi_logo"></a>
-				</div>
-			</center>
-		</div>
-	</div>
-	<br>
-	<br>
-	<br>
-	<hr color="#000">
-	<center>
-		<div style="font-family: 'Bebas Neue', cursive;">
-		<h1 style="font-size: 90px" id="redes_sociales">
-			🙎‍♂️ Mis redes: 🙎‍♂️
-		</h1>
-		<div>
-			<div style="font-size: 35px">
-				<img src="logos/fb.png" width="25"> Facebook: <a href="https://www.facebook.com/Letalandroid" target="_BLANK">Letalandroid</a>
-			</div>
-			<br>
-			<div style="font-size: 35px">
-				<img src="logos/yt.png" width="25"> Youtube: <a href="https://www.youtube.com/channel/UCxO21Lt_MNFx2Plq13UHO-A" target="_BLANK">Letalandroid</a>
-			</div>
-			<br>
-			<div style="font-size: 35px">
-				<img src="logos/twitch.png" width="25"> Twitch: <a href="https://www.twitch.tv/letalandroid" target="_BLANK">Letalandroid</a>
-			</div>
-			<br>
-			<div style="font-size: 35px">
-				<img src="logos/ig.png" width="25"> Instagram: <a href="https://www.instagram.com/carlosj_mm/" target="_BLANK">@Carlosj_mm</a>
-			</div>
-			<br>
-			<div style="font-size: 35px">
-				<img src="logos/twitter.png" width="30"> Twitter: <a href="https://twitter.com/Let_android" target="_BLANK">@Let_android</a>
-			</div>
-			<br>
-			<div style="font-size: 35px">
-				<img src="logos/github.png" width="25"> GitHub: <a href="https://github.com/Letalandroid" target="_BLANK">Letalandroid</a>
-			</div>
-		</div>
-	</div>
-	</center>
-	<br>
-	<br>
-	<br>
-	<br>
-	<div>
-		<h1 style="font-size: 10">
-		Algunos "Trabajos" o "Proyectos":
-		</h1>
-		<ul style="font-size: 20px">
-			<li><a href="https://letalandroid.github.io/mi-primera-pagina-web/">Mi primera página web</a></li>
-			<li><a href="https://letalandroid.github.io/full-html/">Página de full html</a></li>
-			<li><a href="https://letalandroid.github.io/info-html/">Información sobre HTML</a></li>
-		</ul>
-	</div>
-
-	<center>
-		<a href="#inicio">Volver al inicio</a>
-	</center>
-</body>
+	<link href="https://fonts.googleapis.com/css2?family=Pattaya&display=swap" rel="stylesheet">
+  </head>
+  <body id="inicio">
+    <div>
+      <center>
+        <div class="title">
+          <h1>
+            <u>Welcome To My</u>
+          </h1>
+        </div>
+      </center>
+      <div id="audio">
+        <audio src="audio.mp3" controls="" autoplay loop></audio>
+      </div>
+    </div>
+    <div>
+      <div>
+        <p class="p">
+          Mi nombre en si no es "Letalandroid", obviamente, tengo 16 y estoy
+          empezando con esto de la "programación" más especificamente hablando,
+          Desarrollo Web, como verán, esta es una página creada con puro
+          <a href="https://letalandroid.github.io/info-html/">HTML</a>(HyperText
+          Markup Language), o Lenguaje de Marcado e HiperTexto en español, o la
+          base de la mayoría de páginas webs actualmente por no decir todas.
+          Actualmente estudiando en un curso de CSS(Cascading Style Sheets), o
+          Hojas de Estilo en Cascada, o el poder diseñar una página con colores,
+          sombras, etc. Para que en un futuro, no muy lejano o eso espero,
+          comenzar con JavaScript. Y, pues, por todo lo que estoy diciendo,
+          suponiendo mi edad y mi procedencia: Perú 🇵🇪 . Pues no, no he
+          terminado ni tampoco iniciado mi vida universitaria. En fin, sin mucho
+          más que decir, claramente algunas cosas como el fondo y la fuente NO
+          se deberían aplicar desde
+          <a href="https://letalandroid.github.io/info-html/">HTML</a> ya que
+          para eso existe CSS, pero tampoco quería dejar en 0 la página, o no
+          agregarle uno que otro diseño. Ahora si, sin más que añadir, dejo mis
+          <a href="#redes_sociales">redes sociales</a> y alguna que otra imagen.
+        </p>
+      </div>
+      <br />
+      <br />
+      <div>
+        <center>
+          <div>
+            <a
+              href="https://www.youtube.com/channel/UCxO21Lt_MNFx2Plq13UHO-A?sub_confirmation=1"
+              target="_BLANK"
+              ><img src="logo.jpg" alt="logo" width="400" title="mi_logo"
+            /></a>
+          </div>
+        </center>
+      </div>
+    </div>
+    <br />
+    <br />
+    <br />
+    <hr color="#000" />
+    <center>
+      <div style="font-family: 'Bebas Neue', cursive">
+        <h1 style="font-size: 90px" id="redes_sociales">🙎‍♂️ Mis redes: 🙎‍♂️</h1>
+        <div>
+          <div style="font-size: 35px">
+            <img src="logos/fb.png" width="25" /> Facebook:
+            <a href="https://www.facebook.com/Letalandroid" target="_BLANK"
+              >Letalandroid</a
+            >
+          </div>
+          <br />
+          <div style="font-size: 35px">
+            <img src="logos/yt.png" width="25" /> Youtube:
+            <a
+              href="https://www.youtube.com/channel/UCxO21Lt_MNFx2Plq13UHO-A"
+              target="_BLANK"
+              >Letalandroid</a
+            >
+          </div>
+          <br />
+          <div style="font-size: 35px">
+            <img src="logos/twitch.png" width="25" /> Twitch:
+            <a href="https://www.twitch.tv/letalandroid" target="_BLANK"
+              >Letalandroid</a
+            >
+          </div>
+          <br />
+          <div style="font-size: 35px">
+            <img src="logos/ig.png" width="25" /> Instagram:
+            <a href="https://www.instagram.com/carlosj_mm/" target="_BLANK"
+              >@Carlosj_mm</a
+            >
+          </div>
+          <br />
+          <div style="font-size: 35px">
+            <img src="logos/twitter.png" width="30" /> Twitter:
+            <a href="https://twitter.com/Let_android" target="_BLANK"
+              >@Let_android</a
+            >
+          </div>
+          <br />
+          <div style="font-size: 35px">
+            <img src="logos/github.png" width="25" /> GitHub:
+            <a href="https://github.com/Letalandroid" target="_BLANK"
+              >Letalandroid</a
+            >
+          </div>
+        </div>
+      </div>
+    </center>
+	<a class="repositorios" href="https://www.letalandroid.ga/repositorios/">
+      <h3 class="repositorios">REPOSITORIOS</h3>
+	</a>
+    <center>
+      <a href="#inicio">Volver al inicio</a>
+    </center>
+  </body>
 </html>
