--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         </div>
       </div>
     </center>
-	<a class="repositorios" href="https://www.letalandroid.ga/repositorios/">
+	<a class="repositorios" href="https://www.letalandroid.ml/repositorios/">
       <h3 class="repositorios">REPOSITORIOS</h3>
 	</a>
     <center>
