--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
           Hojas de Estilo en Cascada, o el poder diseñar una página con colores,
           sombras, etc. Para que en un futuro, no muy lejano o eso espero,
           comenzar con JavaScript. Y, pues, por todo lo que estoy diciendo,
-          suponiendo mi edad y mi procedencia: Perú 🇵🇪 . Pues no, no he
-          terminado ni tampoco iniciado mi vida universitaria. En fin, sin mucho
+          suponiendo mi edad y mi procedencia: Perú 🇵🇪 . En fin, sin mucho
           más que decir, claramente algunas cosas como el fondo y la fuente NO
           se deberían aplicar desde
           <a href="https://letalandroid.github.io/info-html/">HTML</a> ya que
