--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <title>Letalandroid</title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="stylesheet.css" />
-    <link rel="icon" href="icono.ico" />
+    <link rel="stylesheet" href="css/stylesheet.css" />
+    <link rel="icon" href="src/img/icono.ico" />
     <!--Fuente para el título!-->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
@@ -29,15 +29,15 @@
   </head>
   <body id="inicio">
     <div>
-      <center>
-        <div class="title">
-          <h1>
+      <div>
+        <div>
+          <h1 class="title">
             <u>Welcome To My</u>
           </h1>
         </div>
-      </center>
+      </div>
       <div id="audio">
-        <audio src="audio.mp3" controls="" autoplay loop></audio>
+        <audio src="src/audio/audio.mp3" controls="" autoplay loop></audio>
       </div>
     </div>
     <div>
@@ -65,34 +65,34 @@
       <br />
       <br />
       <div>
-        <center>
+        <div>
           <div>
             <a
               href="https://www.youtube.com/channel/UCxO21Lt_MNFx2Plq13UHO-A?sub_confirmation=1"
               target="_BLANK"
-              ><img src="logo.jpg" alt="logo" width="400" title="mi_logo"
+              ><img src="src/img/logo.jpg" alt="logo" width="400" title="mi_logo"
             /></a>
           </div>
-        </center>
+        </div>
       </div>
     </div>
     <br />
     <br />
     <br />
     <hr color="#000" />
-    <center>
-      <div style="font-family: 'Bebas Neue', cursive">
-        <h1 style="font-size: 90px" id="redes_sociales">🙎‍♂️ Mis redes: 🙎‍♂️</h1>
+    <div class="redes">
+      <div>
+        <h1 id="redes_sociales" class="redes_text_title">🙎‍♂️ Mis redes: 🙎‍♂️</h1>
         <div>
-          <div style="font-size: 35px">
-            <img src="logos/fb.png" width="25" /> Facebook:
+          <div class="redes_text">
+            <img src="src/img/logos/fb.png" width="25" /> Facebook:
             <a href="https://www.facebook.com/Letalandroid" target="_BLANK"
               >Letalandroid</a
             >
           </div>
           <br />
-          <div style="font-size: 35px">
-            <img src="logos/yt.png" width="25" /> Youtube:
+          <div class="redes_text">
+            <img src="src/img/logos/yt.png" width="25" /> Youtube:
             <a
               href="https://www.youtube.com/channel/UCxO21Lt_MNFx2Plq13UHO-A"
               target="_BLANK"
@@ -100,41 +100,41 @@
             >
           </div>
           <br />
-          <div style="font-size: 35px">
-            <img src="logos/twitch.png" width="25" /> Twitch:
+          <div class="redes_text">
+            <img src="src/img/logos/twitch.png" width="25" /> Twitch:
             <a href="https://www.twitch.tv/letalandroid" target="_BLANK"
               >Letalandroid</a
             >
           </div>
           <br />
-          <div style="font-size: 35px">
-            <img src="logos/ig.png" width="25" /> Instagram:
+          <div class="redes_text">
+            <img src="src/img/logos/ig.png" width="25" /> Instagram:
             <a href="https://www.instagram.com/carlosj_mm/" target="_BLANK"
               >@Carlosj_mm</a
             >
           </div>
           <br />
-          <div style="font-size: 35px">
-            <img src="logos/twitter.png" width="30" /> Twitter:
+          <div class="redes_text">
+            <img src="src/img/logos/twitter.png" width="30" /> Twitter:
             <a href="https://twitter.com/Let_android" target="_BLANK"
               >@Let_android</a
             >
           </div>
           <br />
-          <div style="font-size: 35px">
-            <img src="logos/github.png" width="25" /> GitHub:
+          <div class="redes_text">
+            <img src="src/img/logos/github.png" width="25" /> GitHub:
             <a href="https://github.com/Letalandroid" target="_BLANK"
               >Letalandroid</a
             >
           </div>
         </div>
       </div>
-    </center>
+    </div>
 	<a class="repositorios" href="https://www.letalandroid.ml/repositorios/">
       <h3 class="repositorios">REPOSITORIOS</h3>
 	</a>
-    <center>
+    <div class="return">
       <a href="#inicio">Volver al inicio</a>
-    </center>
+    </div class="return">
   </body>
 </html>
