--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 	<!--Fuente para repositorios-->
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Pattaya&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body id="inicio">
     <div>
