Redireccionando el icono en src/img/

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Letalandroid</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="css/stylesheet.css" />
-    <link rel="icon" href="src/img/icono.ico" />
+    <link rel="icon" href="src/img/logo.ico" />
     <!--Fuente para el título!-->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
