ALTO CAMBIO PAPÁ

--- a/mis-redes/index.html
+++ b/mis-redes/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/mis-redes/css/styles.css">
+    <link rel="shortcut icon" href="/src/img/icono.ico" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet" />
     <title>Letalandroid | Mis Redes</title>
 </head>
 <body>
@@ -16,10 +19,10 @@
               <a href="/">Inicio</a>
             </li>
             <li>
-              <a href="/mis-redes/index.html">Mis redes</a>
+              <a href="/mis-redes/">Mis redes</a>
             </li>
             <li>
-              <a href="">Mis Cursos</a>
+              <a href="/mis-cursos/">Mis Cursos</a>
             </li>
           </ul>
         </nav>
@@ -28,7 +31,7 @@
   <main>
     <div class="redes">
     <div>
-      <h1 class="redes_title">🙎‍♂️ Mis redes: 🙎‍♂️</h1>
+      <h1 class="redes_title">Mis redes:</h1>
       <div>
         <div class="redes_subtitle">
           <img src="/src/img/logos/fb.png" class = "icons_redes" /> Facebook:
@@ -52,7 +55,7 @@
         <br />
         <div class="redes_subtitle">
           <img src="/src/img/logos/twitter.png" class="icons_redes" /> Twitter:
-          <a href="https://twitter.com/Let_android" target="_BLANK">@Let_android</a>
+          <a href="https://twitter.com/letalandroid" target="_BLANK">@Letalandroid</a>
         </div>
         <br />
         <div class="redes_subtitle">
@@ -63,5 +66,8 @@
     </div>
   </div>
   </main>
+  <footer>
+        @ Letalandroid - UCV
+    </footer>
 </body>
 </html>
