--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
               <a href="/">Inicio</a>
             </li>
             <li>
-              <a href="/mis-redes/index.html">Mis redes</a>
+              <a href="/mis-redes/">Mis redes</a>
             </li>
             <li>
-              <a href="">Mis Cursos</a>
+              <a href="/mis-redes/">Mis Cursos</a>
             </li>
           </ul>
         </nav>
@@ -47,9 +47,13 @@
       </p>
     </div>
     <div>
-        <a href="https://www.youtube.com/channel/UCxO21Lt_MNFx2Plq13UHO-A?sub_confirmation=1" target="_BLANK"><img class="logo" src="/src/img/logo.jpg" alt="mi_logo" title="" /></a>
+        <a class="logo" href="https://www.youtube.com/channel/UCxO21Lt_MNFx2Plq13UHO-A?sub_confirmation=1" target="_BLANK">
+          <img class="logo" src="/src/img/logo.jpg" alt="mi_logo"/>
+        </a>
     </div>
   </main>
-
+  <footer>
+        @ Letalandroid - UCV
+    </footer>
 </body>
 </html>
