Alto cambio pt2

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Letalandroid | Home</title>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="/css/styles.css" />
-  <link rel="icon" href="/src/img/icono.ico" />
+  <link rel="shortcut icon" href="/src/img/logo.ico" type="image/x-icon">
   <!--Fuente para el título!-->
   <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link href="https://fonts.googleapis.com/css2?family=Ballet&display=swap" rel="stylesheet" />
