--- a/mis-cursos/index.html
+++ b/mis-cursos/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/mis-cursos/css/styles.css">
-    <link rel="shortcut icon" href="/src/img/icono.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/src/img/logo.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
