--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
   <title>Letalandroid | Home</title>
   <meta charset="utf-8" />
+  <meta property="og:title" content="Letalandroid | Home" />
+  <meta property="og:description" content="Mi blog personal" />
+  <meta property="og:type" content="Página web" />
+  <meta property="og:url" content="https://www.letalandroid.ml" />
+  <meta property="og:image" content="https://www.letalandroid.ml/src/background.jpg" />
   <link rel="stylesheet" href="/css/styles.css" />
   <link rel="shortcut icon" href="/src/img/logo.ico" type="image/x-icon">
   <!--Fuente para el título!-->
@@ -17,6 +22,10 @@
   <!--Fuente para repositorios-->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Pattaya&display=swap" rel="stylesheet">
+  <!-- Fuente para el nav -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Coiny&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
