--- a/mis-cursos/index.html
+++ b/mis-cursos/index.html
@@ -9,6 +9,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Coiny&display=swap" rel="stylesheet">
     <title>Letalandroid | Mis Cursos UCV</title>
 </head>
 <body>
@@ -23,7 +26,7 @@
               <a href="/mis-redes/">Mis redes</a>
             </li>
             <li>
-              <a href="/mis-redes/">Mis Cursos</a>
+              <a href="/mis-cursos/">Mis Cursos</a>
             </li>
           </ul>
         </nav>
@@ -42,9 +45,9 @@
       <div>
         <a href=""></a>
       </div>
-      <div>
+      <button>
         <a class="buton" href="/mis-cursos/pensamiento-logico/">Pensamiento Lógico</a>
-      </div>
+      </button>
       <div>
         <a href=""></a>
       </div>
