--- a/mis-redes/index.html
+++ b/mis-redes/index.html
@@ -8,6 +8,9 @@
     <link rel="shortcut icon" href="/src/img/logo.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Coiny&display=swap" rel="stylesheet">
     <title>Letalandroid | Mis Redes</title>
 </head>
 <body>
