Agregando el nuevo vínculo

--- a/mis-cursos/index.html
+++ b/mis-cursos/index.html
@@ -33,24 +33,12 @@
     </div>
   </header>
   <main>
-      <div>
-          <a href=""></a>
-      </div>
-      <div>
-        <a href=""></a>
-      </div>
-      <div>
-        <a href=""></a>
-      </div>
-      <div>
-        <a href=""></a>
-      </div>
       <button>
-        <a class="buton" href="/mis-cursos/pensamiento-logico/">Pensamiento Lógico</a>
+        <a class="buton1" href="/mis-cursos/pensamiento-logico/">Pensamiento Lógico</a>
       </button>
-      <div>
-        <a href=""></a>
-      </div>
+      <button class="buton2">
+          <a href="/mis-cursos/resolve-ecuacion-de-segundo-grado/">Click mágico</a>
+      </button>
   </main>
 </body>
 </html>
