Solucionando algunos errores en los enlaces

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <a href="/mis-redes/">Mis redes</a>
             </li>
             <li>
-              <a href="/mis-redes/">Mis Cursos</a>
+              <a href="/mis-cursos/">Mis Cursos</a>
             </li>
           </ul>
         </nav>
