--- a/mis-cursos/resolve-ecuacion-de-segundo-grado/index.html
+++ b/mis-cursos/resolve-ecuacion-de-segundo-grado/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/src/img/logo.ico" type="image/x-icon">
     <link rel="stylesheet" href="/mis-cursos/resolve-ecuacion-de-segundo-grado/css/styles.css">
-    <title>Resolver una ecuación de segundo grado</title>
+    <title>Letalandroid | Resolver una ecuación de segundo grado</title>
 </head>
 <body>
     <form>
