Probando últimas cositas

--- a/mis-cursos/index.html
+++ b/mis-cursos/index.html
@@ -37,7 +37,7 @@
         <a class="buton1" href="/mis-cursos/pensamiento-logico/">Pensamiento Lógico</a>
       </button>
       <button class="buton2">
-          <a href="/mis-cursos/resolve-ecuacion-de-segundo-grado/">Click mágico</a>
+          <a  class="buton2" href="/mis-cursos/resolve-ecuacion-de-segundo-grado/">Click mágico</a>
       </button>
   </main>
 </body>
