--- a/mis-redes/index.html
+++ b/mis-redes/index.html
@@ -11,10 +11,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Coiny&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap" rel="stylesheet" />
+    <script src="https://kit.fontawesome.com/8b1c082df7.js" crossorigin="anonymous"></script>
     <title>Letalandroid | Mis Redes</title>
 </head>
 <body>
-      <header>
+  <header>
     <div>
         <nav>
           <ul>
@@ -33,44 +36,28 @@
   </header>
   <main>
     <div class="redes">
-    <div>
-      <h1 class="redes_title">Mis redes:</h1>
-      <div>
-        <div class="redes_subtitle">
-          <img src="/src/img/logos/fb.png" class = "icons_redes" /> Facebook:
-          <a href="https://www.facebook.com/Letalandroid" target="_BLANK">Letalandroid</a>
+      <h1 class="redes-title">Mis redes:</h1>
+      <div class="redes-link__container">
+        <div class="redes-link__github">
+            <i class="fab fa-github"><a href="https://github.com/letalandroid">GitHub</a></i>
         </div>
-        <br />
-        <div class="redes_subtitle">
-          <img src="/src/img/logos/yt.png" class = "icons_redes" /> Youtube:
-          <a href="https://www.youtube.com/channel/UCxO21Lt_MNFx2Plq13UHO-A" target="_BLANK">Letalandroid</a>
+        <div class="redes-link__ig">
+          <i class="fab fa-instagram"><a href="https://www.instagram.com/carlosj_mm/" target="_BLANK">@CarlosJ_mm</a></i>
         </div>
-        <br />
-        <div class="redes_subtitle">
-          <img src="/src/img/logos/twitch.png" class = "icons_redes" /> Twitch:
-          <a href="https://www.twitch.tv/letalandroid" target="_BLANK">Letalandroid</a>
+        <div class="redes-link__twitter">
+          <i class="fab fa-twitter"><a href="https://twitter.com/letalandroid" target="_BLANK">@Letalandroid</a></i>
         </div>
-        <br />
-        <div class="redes_subtitle">
-          <img src="/src/img/logos/ig.png" class = "icons_redes" /> Instagram:
-          <a href="https://www.instagram.com/carlosj_mm/" target="_BLANK">@Carlosj_mm</a>
+        <div class="redes-link__twitch">
+          <i class="fab fa-twitch"><a href="https://www.twitch.tv/letalandroid" target="_BLANK">Letalandroid</a></i>
         </div>
-        <br />
-        <div class="redes_subtitle">
-          <img src="/src/img/logos/twitter.png" class="icons_redes" /> Twitter:
-          <a href="https://twitter.com/letalandroid" target="_BLANK">@Letalandroid</a>
-        </div>
-        <br />
-        <div class="redes_subtitle">
-          <img src="/src/img/logos/github.png" class = "icons_redes" /> GitHub:
-          <a href="https://github.com/Letalandroid" target="_BLANK">Letalandroid</a>
+        <div class="redes-link__yt">
+          <i class="fab fa-youtube"><a href="https://www.youtube.com/channel/UCxO21Lt_MNFx2Plq13UHO-A" target="_BLANK">Letalandroid</a></i>
         </div>
       </div>
     </div>
-  </div>
   </main>
-  <footer>
-        @ Letalandroid - UCV
-    </footer>
+  <div class="footer-container">
+    <footer>@ Letalandroid - UCV</footer>
+  </div>
 </body>
 </html>
