--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta property="og:description" content="Mi blog personal" />
   <meta property="og:type" content="Página web" />
   <meta property="og:url" content="https://www.letalandroid.ml" />
-  <meta property="og:image" content="https://www.letalandroid.ml/src/background.jpg" />
+  <meta property="og:image" content="https://www.letalandroid.ml/src/img/yo 1-1.jpeg" />
   <link rel="stylesheet" href="css/styles.css" />
   <link rel="shortcut icon" href="src/img/logo.ico" type="image/x-icon">
   <!--Fuente para el párrafo!-->
