Add twitter OG for your use

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <meta property="og:type" content="Página web" />
   <meta property="og:url" content="https://www.letalandroid.ml" />
   <meta property="og:image" content="https://www.letalandroid.ml/src/img/yo 1-1.jpeg" />
+  <meta property="twitter:card" content="https://www.letalandroid.ml/src/img/large_img.jpg" />
+  <meta property="twitter:title" content="Letalandroid | Home" />
+  <meta property="twitter:description" content="Mi blog personal" />
+  <meta property="twitter:site" content="@letalandroid" />
+  <meta property="twitter:image" content="https://www.letalandroid.ml/src/img/yo 1-1.jpeg" />
   <link rel="stylesheet" href="css/styles.css" />
   <link rel="shortcut icon" href="src/img/logo.ico" type="image/x-icon">
   <!--Fuente para el párrafo!-->
