--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <meta name="twitter:description" content="Mi blog personal" />
   <meta name="twitter:site" content="@letalandroid" />
   <meta name="twitter:image" content="https://www.letalandroid.ml/src/img/yo 1-1.jpeg" />
+  <meta name="twitter:creator" content="@letalandroid" />
   <link rel="stylesheet" href="css/styles.css" />
   <link rel="shortcut icon" href="src/img/logo.ico" type="image/x-icon">
   <!--Fuente para el párrafo!-->
